# rf24_light_ctrl

./: .gitmodules  CMakeLists.txt  LICENSE
rpi/: light.py  rpi-light-ctrl.conf  rpi_light_ctrl.py
rpi/templates/: index.html
src/: CMakeLists.txt  main.cpp
